--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT = 3001
 
-PGUSER=postgres
-PGHOST=localhost
-PGPASSWORD=super980
-PGDATABASE=412_project
-PGPORT=5432
+PGUSER=
+PGHOST=
+PGPASSWORD=
+PGDATABASE=
+PGPORT=
